# linux_system_learn

./: .gitignore  haha  haha.c
IPv4_Media/client/: client  client.c
IPv4_Media/medialib/china/: desc.txt
IPv4_Media/medialib/music/: desc.txt
IPv4_Media/server/: server  server_conf.h
advancedIO/: cpy.c  epoll.c  relay.c  relay_poll  relay_poll.c  relay_un_mangdeng  relay_un_mangdeng.c
advancedIO/mmp/: mmp  mmp.c
advancedIO/pipeline/: mypipe.c  mypipe.h
advancedIO/relayer/: main.c  relay.c  relay.h
anytest/: daemontest  daemontest.c  getlongopt  getlongopt.c
fs/: 100day  100day.c  checkpass  checkpass.c  env  env.c  gouzi  gouzi.c  mydu  mydu.c  passwd  passwd.c  timelog  timelog.c
gdb_learn/: test  test.c
ipc/pipe/: pipe  pipe copy.c  pipe.c  player  player.c
ipc/xsi/msg/: add  add.c
ipc/xsi/shm/: mmp.c  remmp  (+1 more)
my_media/my_media/: CMakeLists.txt
my_media/my_media/src/server/: CMakeLists.txt  medialib.c  medialib.h  mytbf.c  server  server.c  server_conf.h  thr_channel.c  thr_channel.h  thr_list.c  thr_list.h
netradio/: CMakeLists.txt
netradio/include/: proto.h
parallel/signal/: CMakeLists.txt  alarm  block  block.c  filesecond.c  mycat  mycat.c  myslowcat  myslowcat.c  myslowcat_setitimer  myslowcat_setitimer.c  suspend  suspend.c
parallel/thread/: CMakeLists.txt  pthread_t.c
parallel/thread/posix/: CMakeLists.txt  abcd.c  abcdcopy.c  add.c  cleanup.c  create1  create1.c  primer0.c  primer0_pool.c  primer0_pool_busy.c  primer0_poolre  primer0_poolre.c  thread_num  thread_num.c
parallel/thread/posix/keybox/: CMakeLists.txt  main.c
parallel/thread/posix/keybox/tbf/: mytbf.c  mytbf.h
parallel/thread/posix/mysem/: CMakeLists.txt  cmake_install.cmake  hahaha  main.c  main_sem.c
parallel/thread/posix/mysem/include/: mysem.h
parallel/thread/posix/mysem/sem/: CMakeLists.txt  mysem.c
process/: fdaemon  fdaemon.c  few  few.c  mydaemon  mydaemon.c  test.c
python处理函数/: haha.txt  test.py  toreplica.py
sh/: exec.sh
sqlite/: example.db  test  test.c
stdio/: detect0.c  fseek.c  getline.c  test.c  test.md
sysio/: dup.c  open  open.c  opentest  opentest.c
system/: ex  ex.c  few  few.c  forkdemo.c  myshell  test.c
并发/signal/: a.out  alarm.c  alarm5  alarm5.c  filesecond  filesecond.c  myslowcat2  myslowcat2.c  star  star.c
进程/: few  forkdemo  mydemon  mydemon.c  myshell.c  mysu  mysu.c  test
(+96 files in other folders)
