cmake_minimum_required(VERSION 3.6)
project(thread)
add_executable(create1 create1.c)
add_executable(cleanup cleanup.c)
add_executable(primer0 primer0.c)
add_executable(add add.c)
add_executable(abcd abcd.c)
add_executable(primer0_pool_busy primer0_pool_busy.c)
add_executable(primer0_poolre primer0_poolre.c)
add_executable(abcdcopy abcdcopy.c)
# target_link_libraries(primer0 m)
